# voice-recognition

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 712de47eec91_초기_테이블_생성.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  chat.py  notes.py  projects.py  search.py  service.py  ws.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  base.py  note.py  user.py
backend/app/schemas/: auth.py  chat.py  note.py  project.py
backend/app/services/: queue.py
backend/tests/: conftest.py  test_integration.py
docker/postgres/: init.sql
docs/plans/: 2026-02-28-voice-recognition-design.md  2026-02-28-voice-recognition-plan.md
frontend/: .gitignore  Dockerfile  next.config.ts  package.json  pnpm-lock.yaml
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/upload/: page.tsx
frontend/src/components/: AnalysisPanel.tsx  AudioPlayer.tsx  AudioRecorder.tsx  ChatSidebar.tsx  FileUploader.tsx  TranscriptView.tsx
frontend/src/hooks/: useAudioRecorder.ts  useWebSocket.ts
frontend/src/lib/: api.ts
frontend/src/stores/: auth.ts
scripts/: deploy.sh  setup-nvidia-toolkit.sh
worker/: .dockerignore  Dockerfile  pyproject.toml
worker/app/: config.py  main.py
worker/app/pipelines/: analysis.py  stt.py
worker/app/services/: db.py
(+1 files in other folders)
