[project]
name = "voice-recognition-worker"
version = "0.1.0"
description = "Voice Recognition AI Worker"
requires-python = ">=3.12"
dependencies = [
    "whisperx>=3.1.0",
    "redis>=5.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.0.0",
]
